// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RVV Sloterweg status line items > RVV ontheffing Laan van Vlaanderen (AAYYAA) (Verleend) 1`] = `
[
  {
    "datePublished": "2023-10-27",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-10-27",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-10-28",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing Laan van Vlaanderen (AAYYAA) (Verleend) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Laan van Vlaanderen (Nieuw/Ingetrokken) 1`] = `
[
  {
    "datePublished": "2023-07-01T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-07-02T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-03T00:00:00",
    "description": "Wij hebben uw aanvraag voor een RVV ontheffing Laan van Vlaanderen YY-123-A verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": true,
    "status": "Afgehandeld",
  },
  {
    "datePublished": "2023-07-22T00:00:00",
    "description": "Wij hebben uw RVV ontheffing Laan van Vlaanderen voor kenteken YY-123-A ingetrokken. Zie het intrekkingsbesluit voor meer informatie.",
    "documents": [],
    "id": "status-gewijzigd",
    "isActive": true,
    "isChecked": true,
    "status": "Gewijzigd",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Laan van Vlaanderen 1`] = `
[
  {
    "datePublished": "2023-10-27",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-11-01",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-10-27",
    "description": "Wij hebben uw aanvraag voor een RVV ontheffing Laan van Vlaanderen PR067L verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Nieuw / In behandeling) 1`] = `
[
  {
    "datePublished": "2023-08-29",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-08-31",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": true,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "",
    "description": "",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": false,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Nieuw/Verleend) 1`] = `
[
  {
    "datePublished": "2023-07-23T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-08-01T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-27T00:00:00",
    "description": "Wij hebben uw aanvraag voor een RVV ontheffing Vaan van Laanderen YY-123-A, ZZ-122-A verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Nieuw/Verlopen) 1`] = `
[
  {
    "datePublished": "2023-07-01T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-07-02T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-03T00:00:00",
    "description": "Wij hebben uw aanvraag voor een RVV ontheffing Sloterweg ZZ-122-A verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": true,
    "status": "Afgehandeld",
  },
  {
    "datePublished": "2023-07-22T00:00:00",
    "description": "Uw RVV ontheffing Sloterweg voor kenteken ZZ-122-A is verlopen.",
    "documents": [],
    "id": "status-gewijzigd",
    "isActive": true,
    "isChecked": true,
    "status": "Gewijzigd",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Verleend) 1`] = `
[
  {
    "datePublished": "2023-10-27",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-10-27",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-10-28",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing Sloterweg (Verleend) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Wijziging/Verleend) 1`] = `
[
  {
    "datePublished": "2023-07-24T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-07-26T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-28T00:00:00",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing Sloterweg (Wijziging/Verleend) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg (Wijziging/Verlopen) 1`] = `
[
  {
    "datePublished": "2023-07-01T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-07-02T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-03T00:00:00",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing Sloterweg (Wijziging/Verlopen) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": true,
    "status": "Afgehandeld",
  },
  {
    "datePublished": "2023-07-22T00:00:00",
    "description": "Uw RVV ontheffing Sloterweg voor kenteken BB-344-Q is verlopen.",
    "documents": [],
    "id": "status-gewijzigd",
    "isActive": true,
    "isChecked": true,
    "status": "Gewijzigd",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg West (Nieuw in behandeling) 1`] = `
[
  {
    "datePublished": "2023-08-17",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-08-19",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": true,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "",
    "description": "",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": false,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg West (Nieuw vervallen) 1`] = `
[
  {
    "datePublished": "2023-08-29",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-08-31",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-09-01",
    "description": "Wij hebben uw aanvraag voor een RVV ontheffing Sloterweg West PR067L verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": true,
    "status": "Afgehandeld",
  },
  {
    "datePublished": "2023-08-31",
    "description": "Uw RVV ontheffing Sloterweg West voor kenteken PR067L is verlopen.",
    "documents": [],
    "id": "status-gewijzigd",
    "isActive": true,
    "isChecked": true,
    "status": "Gewijzigd",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg West (Wijziging / ontvangen) 1`] = `
[
  {
    "datePublished": "2023-08-29",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": true,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-08-31",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": false,
    "status": "In behandeling",
  },
  {
    "datePublished": "",
    "description": "",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": false,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg West (Wijziging Verleend / ingetrokken) 1`] = `
[
  {
    "datePublished": "2023-11-17",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-11-19",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-11-20",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing Sloterweg West (Wijziging Verleend + ingetrokken) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": false,
    "isChecked": true,
    "status": "Afgehandeld",
  },
  {
    "datePublished": "",
    "description": "Wij hebben uw RVV ontheffing Sloterweg West voor kenteken 9998877 ingetrokken. Zie het intrekkingsbesluit voor meer informatie.",
    "documents": [],
    "id": "status-gewijzigd",
    "isActive": true,
    "isChecked": true,
    "status": "Gewijzigd",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing Sloterweg West (Wijziging ingetrokken) 1`] = `
[
  {
    "datePublished": "2023-11-17",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-11-19",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "",
    "description": "Wij hebben uw RVV ontheffing Sloterweg West voor kenteken 1234356 ingetrokken. Zie het intrekkingsbesluit voor meer informatie.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing van Vlaanderenlaan (Wijziging/Ingetrokken) 1`] = `
[
  {
    "datePublished": "2023-07-24T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-07-26T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-07-26T00:00:00",
    "description": "Wij hebben uw RVV ontheffing van Vlaanderenlaan voor kenteken BB-344-P, VV-899-C ingetrokken. Zie het intrekkingsbesluit voor meer informatie.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;

exports[`RVV Sloterweg status line items > RVV ontheffing van Vlaanderenlaan (Wijziging/Ontvangen) 1`] = `
[
  {
    "datePublished": "2023-09-24T11:21:33",
    "description": "",
    "documents": [],
    "id": "status-ontvangen",
    "isActive": false,
    "isChecked": true,
    "status": "Ontvangen",
  },
  {
    "datePublished": "2023-09-26T00:00:00",
    "description": "",
    "documents": [],
    "id": "status-in-behandeling",
    "isActive": false,
    "isChecked": true,
    "status": "In behandeling",
  },
  {
    "datePublished": "2023-09-28T00:00:00",
    "description": "Wij hebben uw kentekenwijziging voor een RVV ontheffing van Vlaanderenlaan (Wijziging/Ontvangen) verleend.",
    "documents": [],
    "id": "status-afgehandeld",
    "isActive": true,
    "isChecked": true,
    "status": "Afgehandeld",
  },
]
`;
